kompose/manifests/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: kube-system
spec:
  selector:
    app: default-response-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
