kompose/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: main-ingress
  labels:
    app: main-ingress
spec:
  rules:
    - host: quickplan.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3001
          - path: /pgadmin4
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5001
